# WoWGuildCharacterDataFetcher

./: .gitignore  Dockerfile  README.md  app.py  characters.duckdb  import.py  import_top_guilds.sh  pyproject.toml
Entities/: Character.py
Services/: BattleNet.py
assets/: style.css
